po: update po/sr_RS@latin/provinces.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sr_RS@latin/provinces.po
+++ b/po/sr_RS@latin/provinces.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-31 15:11+0000\n"
+"PO-Revision-Date: 2016-11-01 11:05+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -67,7 +67,7 @@ msgstr "Ajdaho"
 
 msgctxt "province"
 msgid "Illinois"
-msgstr ""
+msgstr "Ilinois"
 
 msgctxt "province"
 msgid "Indiana"
@@ -131,7 +131,7 @@ msgstr "Nevada"
 
 msgctxt "province"
 msgid "New Hampshire"
-msgstr ""
+msgstr "Nju Hempšir"
 
 msgctxt "province"
 msgid "New Jersey"
@@ -139,7 +139,7 @@ msgstr "Nju Džerzi"
 
 msgctxt "province"
 msgid "New Mexico"
-msgstr ""
+msgstr "Novi Meksiko"
 
 msgctxt "province"
 msgid "New York"
@@ -147,11 +147,11 @@ msgstr "Njujork"
 
 msgctxt "province"
 msgid "North Carolina"
-msgstr ""
+msgstr "Severna Karolina"
 
 msgctxt "province"
 msgid "North Dakota"
-msgstr ""
+msgstr "Severna Dakota"
 
 msgctxt "province"
 msgid "Ohio"
@@ -167,19 +167,19 @@ msgstr "Oregon"
 
 msgctxt "province"
 msgid "Pennsylvania"
-msgstr ""
+msgstr "Pensilvanija"
 
 msgctxt "province"
 msgid "Rhode Island"
-msgstr ""
+msgstr "Roud Ajland"
 
 msgctxt "province"
 msgid "South Carolina"
-msgstr ""
+msgstr "Južna Karolina"
 
 msgctxt "province"
 msgid "South Dakota"
-msgstr ""
+msgstr "Južna Dakota"
 
 msgctxt "province"
 msgid "Tennessee"
@@ -195,7 +195,7 @@ msgstr "Juta"
 
 msgctxt "province"
 msgid "Vermont"
-msgstr ""
+msgstr "Vermont"
 
 msgctxt "province"
 msgid "Virginia"
@@ -207,7 +207,7 @@ msgstr "Vašington"
 
 msgctxt "province"
 msgid "West Virginia"
-msgstr ""
+msgstr "Zapadna Virdžinija"
 
 msgctxt "province"
 msgid "Wisconsin"
@@ -219,11 +219,11 @@ msgstr "Vajoming"
 
 msgctxt "province"
 msgid "District of Columbia"
-msgstr ""
+msgstr "Okrug Kolumbija"
 
 msgctxt "province"
 msgid "American Samoa"
-msgstr ""
+msgstr "Američka Samoa"
 
 msgctxt "province"
 msgid "Guam"
@@ -263,19 +263,19 @@ msgstr "Alberta"
 
 msgctxt "province"
 msgid "British Columbia"
-msgstr ""
+msgstr "Britanska Kolumbija"
 
 msgctxt "province"
 msgid "Manitoba"
-msgstr ""
+msgstr "Manitoba"
 
 msgctxt "province"
 msgid "New Brunswick"
-msgstr ""
+msgstr "Nju Bransvik"
 
 msgctxt "province"
 msgid "Newfoundland and Labrador"
-msgstr ""
+msgstr "Njufaundlend i Labrador"
 
 msgctxt "province"
 msgid "Northwest Territories"
@@ -283,11 +283,11 @@ msgstr ""
 
 msgctxt "province"
 msgid "Nova Scotia"
-msgstr ""
+msgstr "Nova Škotska"
 
 msgctxt "province"
 msgid "Nunavut"
-msgstr ""
+msgstr "Nunavut"
 
 msgctxt "province"
 msgid "Ontario"
@@ -295,7 +295,7 @@ msgstr "Ontario"
 
 msgctxt "province"
 msgid "Prince Edward Island"
-msgstr ""
+msgstr "Ostrvo Princa Edvarda"
 
 msgctxt "province"
 msgid "Quebec"
@@ -303,55 +303,55 @@ msgstr "Kvebek"
 
 msgctxt "province"
 msgid "Saskatchewan"
-msgstr ""
+msgstr "Saskačevan"
 
 msgctxt "province"
 msgid "Yukon Territory"
-msgstr ""
+msgstr "Jukon"
 
 msgctxt "province"
 msgid "Maharashtra"
-msgstr ""
+msgstr "Maharaštra"
 
 msgctxt "province"
 msgid "Karnataka"
-msgstr ""
+msgstr "Karnataka"
 
 msgctxt "province"
 msgid "Andhra Pradesh"
-msgstr ""
+msgstr "Andra Pradeš"
 
 msgctxt "province"
 msgid "Arunachal Pradesh"
-msgstr ""
+msgstr "Arunačal Pradeš"
 
 msgctxt "province"
 msgid "Assam"
-msgstr ""
+msgstr "Asam"
 
 msgctxt "province"
 msgid "Bihar"
-msgstr ""
+msgstr "Bihar"
 
 msgctxt "province"
 msgid "Chhattisgarh"
-msgstr ""
+msgstr "Čatisgar"
 
 msgctxt "province"
 msgid "Goa"
-msgstr ""
+msgstr "Goa"
 
 msgctxt "province"
 msgid "Gujarat"
-msgstr ""
+msgstr "Gudžarat"
 
 msgctxt "province"
 msgid "Haryana"
-msgstr ""
+msgstr "Harajana"
 
 msgctxt "province"
 msgid "Himachal Pradesh"
-msgstr ""
+msgstr "Himačal Pradeš"
 
 msgctxt "province"
 msgid "Jammu and Kashmir"
@@ -359,155 +359,155 @@ msgstr ""
 
 msgctxt "province"
 msgid "Jharkhand"
-msgstr ""
+msgstr "Džarkand"
 
 msgctxt "province"
 msgid "Kerala"
-msgstr ""
+msgstr "Kerala"
 
 msgctxt "province"
 msgid "Madhya Pradesh"
-msgstr ""
+msgstr "Madja Pradeš"
 
 msgctxt "province"
 msgid "Manipur"
-msgstr ""
+msgstr "Manipur"
 
 msgctxt "province"
 msgid "Meghalaya"
-msgstr ""
+msgstr "Meghalaja"
 
 msgctxt "province"
 msgid "Mizoram"
-msgstr ""
+msgstr "Mizoram"
 
 msgctxt "province"
 msgid "Nagaland"
-msgstr ""
+msgstr "Nagaland"
 
 msgctxt "province"
 msgid "Orissa"
-msgstr ""
+msgstr "Orisa"
 
 msgctxt "province"
 msgid "Punjab"
-msgstr ""
+msgstr "Pendžab"
 
 msgctxt "province"
 msgid "Rajasthan"
-msgstr ""
+msgstr "Radžastan"
 
 msgctxt "province"
 msgid "Sikkim"
-msgstr ""
+msgstr "Sikim"
 
 msgctxt "province"
 msgid "Tamil Nadu"
-msgstr ""
+msgstr "Tamil Nadu"
 
 msgctxt "province"
 msgid "Tripura"
-msgstr ""
+msgstr "Tripura"
 
 msgctxt "province"
 msgid "Uttaranchal"
-msgstr ""
+msgstr "Utarančal"
 
 msgctxt "province"
 msgid "Uttar Pradesh"
-msgstr ""
+msgstr "Utar Pradeš"
 
 msgctxt "province"
 msgid "West Bengal"
-msgstr ""
+msgstr "Zapadni Bengal"
 
 msgctxt "province"
 msgid "Andaman and Nicobar Islands"
-msgstr ""
+msgstr "Andamani i Nikobari"
 
 msgctxt "province"
 msgid "Dadra and Nagar Haveli"
-msgstr ""
+msgstr "Dadra i Nagar Havel"
 
 msgctxt "province"
 msgid "Daman and Diu"
-msgstr ""
+msgstr "Daman i Diju"
 
 msgctxt "province"
 msgid "Delhi"
-msgstr ""
+msgstr "Delhi"
 
 msgctxt "province"
 msgid "Lakshadweep"
-msgstr ""
+msgstr "Lakadivi"
 
 msgctxt "province"
 msgid "Pondicherry"
-msgstr ""
+msgstr "Pondišeri"
 
 msgctxt "province"
 msgid "mazowieckie"
-msgstr ""
+msgstr "Mazovsko"
 
 msgctxt "province"
 msgid "pomorskie"
-msgstr ""
+msgstr "Pomorje"
 
 msgctxt "province"
 msgid "dolnośląskie"
-msgstr ""
+msgstr "Donje Šlesko"
 
 msgctxt "province"
 msgid "kujawsko-pomorskie"
-msgstr ""
+msgstr "Kujavsko-Pomorje"
 
 msgctxt "province"
 msgid "lubelskie"
-msgstr ""
+msgstr "Lublinsko"
 
 msgctxt "province"
 msgid "lubuskie"
-msgstr ""
+msgstr "Lubuško"
 
 msgctxt "province"
 msgid "łódzkie"
-msgstr ""
+msgstr "Lođ"
 
 msgctxt "province"
 msgid "małopolskie"
-msgstr ""
+msgstr "Malopoljsko"
 
 msgctxt "province"
 msgid "opolskie"
-msgstr ""
+msgstr "Opolje"
 
 msgctxt "province"
 msgid "podkarpackie"
-msgstr ""
+msgstr "Podkarpatje"
 
 msgctxt "province"
 msgid "podlaskie"
-msgstr ""
+msgstr "Podlasko"
 
 msgctxt "province"
 msgid "śląskie"
-msgstr ""
+msgstr "Šlesko"
 
 msgctxt "province"
 msgid "świętokrzyskie"
-msgstr ""
+msgstr "Svetokriško"
 
 msgctxt "province"
 msgid "warmińsko-mazurskie"
-msgstr ""
+msgstr "Varminsko-Mazursko"
 
 msgctxt "province"
 msgid "wielkopolskie"
-msgstr ""
+msgstr "Velikopoljsko"
 
 msgctxt "province"
 msgid "zachodniopomorskie"
-msgstr ""
+msgstr "Zapadno Pomorje"
 
 msgctxt "province"
 msgid "Abu Zaby"
@@ -859,75 +859,75 @@ msgstr ""
 
 msgctxt "province"
 msgid "Bengo"
-msgstr ""
+msgstr "Bengo"
 
 msgctxt "province"
 msgid "Benguela"
-msgstr ""
+msgstr "Bengela"
 
 msgctxt "province"
 msgid "Bie"
-msgstr ""
+msgstr "Bije"
 
 msgctxt "province"
 msgid "Cabinda"
-msgstr ""
+msgstr "Kabinda"
 
 msgctxt "province"
 msgid "Cuando-Cubango"
-msgstr ""
+msgstr "Kvando Kubango"
 
 msgctxt "province"
 msgid "Cuanza Norte"
-msgstr ""
+msgstr "Severna Kvanza"
 
 msgctxt "province"
 msgid "Cuanza Sul"
-msgstr ""
+msgstr "Južna Kvanza"
 
 msgctxt "province"
 msgid "Cunene"
-msgstr ""
+msgstr "Kunene"
 
 msgctxt "province"
 msgid "Huambo"
-msgstr ""
+msgstr "Huambo"
 
 msgctxt "province"
 msgid "Huila"
-msgstr ""
+msgstr "Huila"
 
 msgctxt "province"
 msgid "Luanda"
-msgstr ""
+msgstr "Luanda"
 
 msgctxt "province"
 msgid "Lunda Norte"
-msgstr ""
+msgstr "Severna Lunda"
 
 msgctxt "province"
 msgid "Lunda Sul"
-msgstr ""
+msgstr "Južna Lunda"
 
 msgctxt "province"
 msgid "Malange"
-msgstr ""
+msgstr "Malanže"
 
 msgctxt "province"
 msgid "Moxico"
-msgstr ""
+msgstr "Mošiko"
 
 msgctxt "province"
 msgid "Namibe"
-msgstr ""
+msgstr "Namibe"
 
 msgctxt "province"
 msgid "Uige"
-msgstr ""
+msgstr "Ujiže"
 
 msgctxt "province"
 msgid "Zaire"
-msgstr ""
+msgstr "Zaire"
 
 msgctxt "province"
 msgid "Capital federal"
@@ -935,167 +935,167 @@ msgstr ""
 
 msgctxt "province"
 msgid "Buenos Aires"
-msgstr ""
+msgstr "Buenos Ajres"
 
 msgctxt "province"
 msgid "Catamarca"
-msgstr ""
+msgstr "Katamarka"
 
 msgctxt "province"
 msgid "Cordoba"
-msgstr ""
+msgstr "Kordoba"
 
 msgctxt "province"
 msgid "Corrientes"
-msgstr ""
+msgstr "Korijentes"
 
 msgctxt "province"
 msgid "Chaco"
-msgstr ""
+msgstr "Čako"
 
 msgctxt "province"
 msgid "Chubut"
-msgstr ""
+msgstr "Čubut"
 
 msgctxt "province"
 msgid "Entre Rios"
-msgstr ""
+msgstr "Entre Rios"
 
 msgctxt "province"
 msgid "Formosa"
-msgstr ""
+msgstr "Formosa"
 
 msgctxt "province"
 msgid "Jujuy"
-msgstr ""
+msgstr "Huhuj"
 
 msgctxt "province"
 msgid "La Pampa"
-msgstr ""
+msgstr "Pampa"
 
 msgctxt "province"
 msgid "Mendoza"
-msgstr ""
+msgstr "Mendoza"
 
 msgctxt "province"
 msgid "Misiones"
-msgstr ""
+msgstr "Misiones"
 
 msgctxt "province"
 msgid "Neuquen"
-msgstr ""
+msgstr "Neuken"
 
 msgctxt "province"
 msgid "Rio Negro"
-msgstr ""
+msgstr "Rio Negro"
 
 msgctxt "province"
 msgid "Salta"
-msgstr ""
+msgstr "Salta"
 
 msgctxt "province"
 msgid "San Juan"
-msgstr ""
+msgstr "San Huan"
 
 msgctxt "province"
 msgid "San Luis"
-msgstr ""
+msgstr "San Luis"
 
 msgctxt "province"
 msgid "Santa Cruz"
-msgstr ""
+msgstr "Santa Kruz"
 
 msgctxt "province"
 msgid "Santa Fe"
-msgstr ""
+msgstr "Santa Fe"
 
 msgctxt "province"
 msgid "Santiago del Estero"
-msgstr ""
+msgstr "Santijago del Estero"
 
 msgctxt "province"
 msgid "Tierra del Fuego"
-msgstr ""
+msgstr "Ognjena Zemlja"
 
 msgctxt "province"
 msgid "Tucuman"
-msgstr ""
+msgstr "Tukuman"
 
 msgctxt "province"
 msgid "Burgenland"
-msgstr ""
+msgstr "Burgenland"
 
 msgctxt "province"
 msgid "Kärnten"
-msgstr ""
+msgstr "Koruška"
 
 msgctxt "province"
 msgid "Niederosterreich"
-msgstr ""
+msgstr "Donja Austrija"
 
 msgctxt "province"
 msgid "Oberosterreich"
-msgstr ""
+msgstr "Gornja Austrija"
 
 msgctxt "province"
 msgid "Salzburg"
-msgstr ""
+msgstr "Salcburg"
 
 msgctxt "province"
 msgid "Steiermark"
-msgstr ""
+msgstr "Štajerska"
 
 msgctxt "province"
 msgid "Tirol"
-msgstr ""
+msgstr "Tirol"
 
 msgctxt "province"
 msgid "Vorarlberg"
-msgstr ""
+msgstr "Forarlberg"
 
 msgctxt "province"
 msgid "Wien"
-msgstr ""
+msgstr "Beč"
 
 msgctxt "province"
 msgid "Australian Antarctic Territory"
-msgstr ""
+msgstr "Australijska antarktička teritorija"
 
 msgctxt "province"
 msgid "Australian Capital Territory"
-msgstr ""
+msgstr "Australijska prestonička teritorija"
 
 msgctxt "province"
 msgid "Northern Territory"
-msgstr ""
+msgstr "Severna teritorija"
 
 msgctxt "province"
 msgid "New South Wales"
-msgstr ""
+msgstr "Novi Južni Vels"
 
 msgctxt "province"
 msgid "Queensland"
-msgstr ""
+msgstr "Kvinslend"
 
 msgctxt "province"
 msgid "South Australia"
-msgstr ""
+msgstr "Južna Australija"
 
 msgctxt "province"
 msgid "Tasmania"
-msgstr ""
+msgstr "Tasmanija"
 
 msgctxt "province"
 msgid "Victoria"
-msgstr ""
+msgstr "Viktorija"
 
 msgctxt "province"
 msgid "Western Australia"
-msgstr ""
+msgstr "Zapadna Australija"
 
 msgctxt "province"
 msgid "Naxcivan"
-msgstr ""
+msgstr "Nahčivan"
 
 msgctxt "province"
 msgid "Ali Bayramli"
@@ -1103,11 +1103,11 @@ msgstr ""
 
 msgctxt "province"
 msgid "Baki"
-msgstr ""
+msgstr "Baku"
 
 msgctxt "province"
 msgid "Ganca"
-msgstr ""
+msgstr "Gandža"
 
 msgctxt "province"
 msgid "Lankaran"
@@ -1115,243 +1115,243 @@ msgstr ""
 
 msgctxt "province"
 msgid "Mingacevir"
-msgstr ""
+msgstr "Mingečaur"
 
 msgctxt "province"
 msgid "Naftalan"
-msgstr ""
+msgstr "Naftalan"
 
 msgctxt "province"
 msgid "Saki"
-msgstr ""
+msgstr "Šeki"
 
 msgctxt "province"
 msgid "Sumqayit"
-msgstr ""
+msgstr "Sumgajit"
 
 msgctxt "province"
 msgid "Susa"
-msgstr ""
+msgstr "Šuša"
 
 msgctxt "province"
 msgid "Xankandi"
-msgstr ""
+msgstr "Hankendi"
 
 msgctxt "province"
 msgid "Yevlax"
-msgstr ""
+msgstr "Jevlah"
 
 msgctxt "province"
 msgid "Abseron"
-msgstr ""
+msgstr "Apšeron"
 
 msgctxt "province"
 msgid "Agcabadi"
-msgstr ""
+msgstr "Agdžabedi"
 
 msgctxt "province"
 msgid "Agdam"
-msgstr ""
+msgstr "Agdam"
 
 msgctxt "province"
 msgid "Agdas"
-msgstr ""
+msgstr "Agdaš"
 
 msgctxt "province"
 msgid "Agstafa"
-msgstr ""
+msgstr "Akstafa"
 
 msgctxt "province"
 msgid "Agsu"
-msgstr ""
+msgstr "Ahsu"
 
 msgctxt "province"
 msgid "Astara"
-msgstr ""
+msgstr "Astara"
 
 msgctxt "province"
 msgid "Babak"
-msgstr ""
+msgstr "Babek"
 
 msgctxt "province"
 msgid "Balakan"
-msgstr ""
+msgstr "Belokani"
 
 msgctxt "province"
 msgid "Barda"
-msgstr ""
+msgstr "Barda"
 
 msgctxt "province"
 msgid "Beylagan"
-msgstr ""
+msgstr "Bejlagan"
 
 msgctxt "province"
 msgid "Bilasuvar"
-msgstr ""
+msgstr "Biljasuvar"
 
 msgctxt "province"
 msgid "Cabrayll"
-msgstr ""
+msgstr "Džebrajilj"
 
 msgctxt "province"
 msgid "Calilabad"
-msgstr ""
+msgstr "Džalilabad"
 
 msgctxt "province"
 msgid "Culfa"
-msgstr ""
+msgstr "Džuljfa"
 
 msgctxt "province"
 msgid "Daskasan"
-msgstr ""
+msgstr "Daškesan"
 
 msgctxt "province"
 msgid "Davaci"
-msgstr ""
+msgstr "Šabran"
 
 msgctxt "province"
 msgid "Fuzuli"
-msgstr ""
+msgstr "Fizuli"
 
 msgctxt "province"
 msgid "Gadabay"
-msgstr ""
+msgstr "Kedabek"
 
 msgctxt "province"
 msgid "Goranboy"
-msgstr ""
+msgstr "Geranboj"
 
 msgctxt "province"
 msgid "Goycay"
-msgstr ""
+msgstr "Geokčaj"
 
 msgctxt "province"
 msgid "Haciqabul"
-msgstr ""
+msgstr "Adžigabulj"
 
 msgctxt "province"
 msgid "Imisli"
-msgstr ""
+msgstr "Imišli"
 
 msgctxt "province"
 msgid "Ismayilli"
-msgstr ""
+msgstr "Ismaili"
 
 msgctxt "province"
 msgid "Kalbacar"
-msgstr ""
+msgstr "Keljbadžar"
 
 msgctxt "province"
 msgid "Kurdamir"
-msgstr ""
+msgstr "Kjurdamir"
 
 msgctxt "province"
 msgid "Lacin"
-msgstr ""
+msgstr "Lačin"
 
 msgctxt "province"
 msgid "Lerik"
-msgstr ""
+msgstr "Leri"
 
 msgctxt "province"
 msgid "Masalli"
-msgstr ""
+msgstr "Masali"
 
 msgctxt "province"
 msgid "Neftcala"
-msgstr ""
+msgstr "Neftečala"
 
 msgctxt "province"
 msgid "Oguz"
-msgstr ""
+msgstr "Oguz"
 
 msgctxt "province"
 msgid "Ordubad"
-msgstr ""
+msgstr "Ordubad"
 
 msgctxt "province"
 msgid "Qabala"
-msgstr ""
+msgstr "Gabala"
 
 msgctxt "province"
 msgid "Qax"
-msgstr ""
+msgstr "Kahi"
 
 msgctxt "province"
 msgid "Qazax"
-msgstr ""
+msgstr "Kazah"
 
 msgctxt "province"
 msgid "Qobustan"
-msgstr ""
+msgstr "Gobustan"
 
 msgctxt "province"
 msgid "Quba"
-msgstr ""
+msgstr "Kuba"
 
 msgctxt "province"
 msgid "Qubadli"
-msgstr ""
+msgstr "Kubatli"
 
 msgctxt "province"
 msgid "Qusar"
-msgstr ""
+msgstr "Kusari"
 
 msgctxt "province"
 msgid "Saatli"
-msgstr ""
+msgstr "Satli"
 
 msgctxt "province"
 msgid "Sabirabad"
-msgstr ""
+msgstr "Sabirabad"
 
 msgctxt "province"
 msgid "Sadarak"
-msgstr ""
+msgstr "Sadara"
 
 msgctxt "province"
 msgid "Sahbuz"
-msgstr ""
+msgstr "Šahbuz"
 
 msgctxt "province"
 msgid "Salyan"
-msgstr ""
+msgstr "Saljani"
 
 msgctxt "province"
 msgid "Samaxi"
-msgstr ""
+msgstr "Šemaha"
 
 msgctxt "province"
 msgid "Samkir"
-msgstr ""
+msgstr "Šamkir"
 
 msgctxt "province"
 msgid "Samux"
-msgstr ""
+msgstr "Samuh"
 
 msgctxt "province"
 msgid "Sarur"
-msgstr ""
+msgstr "Šarur"
 
 msgctxt "province"
 msgid "Siyazan"
-msgstr ""
+msgstr "Sijazan"
 
 msgctxt "province"
 msgid "Tartar"
-msgstr ""
+msgstr "Terter"
 
 msgctxt "province"
 msgid "Tovuz"
-msgstr ""
+msgstr "Tovuz"
 
 msgctxt "province"
 msgid "Ucar"
-msgstr ""
+msgstr "Udžari"
 
 msgctxt "province"
 msgid "Xacmaz"
-msgstr ""
+msgstr "Hačmas"
 
 msgctxt "province"
 msgid "Xanlar"
@@ -1359,39 +1359,39 @@ msgstr ""
 
 msgctxt "province"
 msgid "Xizi"
-msgstr ""
+msgstr "Hizi"
 
 msgctxt "province"
 msgid "Xocali"
-msgstr ""
+msgstr "Hodaži"
 
 msgctxt "province"
 msgid "Xocavand"
-msgstr ""
+msgstr "Hodžavend"
 
 msgctxt "province"
 msgid "Yardimli"
-msgstr ""
+msgstr "Jadrimli"
 
 msgctxt "province"
 msgid "Zangilan"
-msgstr ""
+msgstr "Zengelan"
 
 msgctxt "province"
 msgid "Zaqatala"
-msgstr ""
+msgstr "Zakatali"
 
 msgctxt "province"
 msgid "Zardab"
-msgstr ""
+msgstr "Zardob"
 
 msgctxt "province"
 msgid "Federacija Bosna i Hercegovina"
-msgstr ""
+msgstr "Federacija Bosna i Hercegovina"
 
 msgctxt "province"
 msgid "Republika Srpska"
-msgstr ""
+msgstr "Republika Srpska"
 
 msgctxt "province"
 msgid "Bagerhat zila"
@@ -1651,43 +1651,43 @@ msgstr ""
 
 msgctxt "province"
 msgid "Antwerpen"
-msgstr ""
+msgstr "Antverpen"
 
 msgctxt "province"
 msgid "Brabant Wallon"
-msgstr ""
+msgstr "Valonski Brabant"
 
 msgctxt "province"
 msgid "Hainaut"
-msgstr ""
+msgstr "Eno"
 
 msgctxt "province"
 msgid "Liege"
-msgstr ""
+msgstr "Lijež"
 
 msgctxt "province"
 msgid "Limburg"
-msgstr ""
+msgstr "Limburg"
 
 msgctxt "province"
 msgid "Luxembourg"
-msgstr ""
+msgstr "Luksemburg"
 
 msgctxt "province"
 msgid "Namur"
-msgstr ""
+msgstr "Namir"
 
 msgctxt "province"
 msgid "Oost-Vlaanderen"
-msgstr ""
+msgstr "Istočna Flandrija"
 
 msgctxt "province"
 msgid "Vlaams-Brabant"
-msgstr ""
+msgstr "Flamanski Brabant"
 
 msgctxt "province"
 msgid "West-Vlaanderen"
-msgstr ""
+msgstr "Zapadna Flandrija"
 
 msgctxt "province"
 msgid "Bale"
@@ -1871,107 +1871,107 @@ msgstr ""
 
 msgctxt "province"
 msgid "Blagoevgrad"
-msgstr ""
+msgstr "Blagoevgrad"
 
 msgctxt "province"
 msgid "Burgas"
-msgstr ""
+msgstr "Burgas"
 
 msgctxt "province"
 msgid "Dobrich"
-msgstr ""
+msgstr "Dobrič"
 
 msgctxt "province"
 msgid "Gabrovo"
-msgstr ""
+msgstr "Gabrovo"
 
 msgctxt "province"
 msgid "Haskovo"
-msgstr ""
+msgstr "Haskovo"
 
 msgctxt "province"
 msgid "Yambol"
-msgstr ""
+msgstr "Jambol"
 
 msgctxt "province"
 msgid "Kardzhali"
-msgstr ""
+msgstr "Krdžali"
 
 msgctxt "province"
 msgid "Kyustendil"
-msgstr ""
+msgstr "Ćustendil"
 
 msgctxt "province"
 msgid "Lovech"
-msgstr ""
+msgstr "Loveč"
 
 msgctxt "province"
 msgid "Pazardzik"
-msgstr ""
+msgstr "Pazardžik"
 
 msgctxt "province"
 msgid "Pernik"
-msgstr ""
+msgstr "Pernik"
 
 msgctxt "province"
 msgid "Pleven"
-msgstr ""
+msgstr "Pleven"
 
 msgctxt "province"
 msgid "Plovdiv"
-msgstr ""
+msgstr "Plovdiv"
 
 msgctxt "province"
 msgid "Razgrad"
-msgstr ""
+msgstr "Razgrad"
 
 msgctxt "province"
 msgid "Ruse"
-msgstr ""
+msgstr "Ruse"
 
 msgctxt "province"
 msgid "Silistra"
-msgstr ""
+msgstr "Silistra"
 
 msgctxt "province"
 msgid "Sliven"
-msgstr ""
+msgstr "Sliven"
 
 msgctxt "province"
 msgid "Smolyan"
-msgstr ""
+msgstr "Smoljan"
 
 msgctxt "province"
 msgid "Sofia"
-msgstr ""
+msgstr "Sofija"
 
 msgctxt "province"
 msgid "Stara Zagora"
-msgstr ""
+msgstr "Stara Zagora"
 
 msgctxt "province"
 msgid "Shumen"
-msgstr ""
+msgstr "Šumen"
 
 msgctxt "province"
 msgid "Targovishte"
-msgstr ""
+msgstr "Trgovište"
 
 msgctxt "province"
 msgid "Varna"
-msgstr ""
+msgstr "Varna"
 
 msgctxt "province"
 msgid "Veliko Tarnovo"
-msgstr ""
+msgstr "Veliko Trnovo"
 
 msgctxt "province"
 msgid "Vidin"
-msgstr ""
+msgstr "Vidin"
 
 msgctxt "province"
 msgid "Vratsa"
-msgstr ""
+msgstr "Vraca"
 
 msgctxt "province"
 msgid "Al Hadd"
@@ -4919,7 +4919,7 @@ msgstr ""
 
 msgctxt "province"
 msgid "Glasgow City"
-msgstr ""
+msgstr "Glazgov"
 
 msgctxt "province"
 msgid "Gloucestershire"
