po: update po/ca_ES/common-base.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/ca_ES/common-base.po
+++ b/po/ca_ES/common-base.po
@@ -17,8 +17,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-21 12:47+0000\n"
-"Last-Translator: ixiam <info@ixiam.com>\n"
+"PO-Revision-Date: 2016-11-02 13:55+0000\n"
+"Last-Translator: francescbassas <francesc@babu.cat>\n"
 "Language-Team: Catalan (http://www.transifex.com/civicrm/civicrm/language/ca/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -3947,7 +3947,7 @@ msgstr ""
 #: CRM/Contact/Form/Search/Custom/ContribSYBNT.php
 #: CRM/Contact/Form/Search/Custom/ContributionAggregate.php
 msgid "Contribution Amount"
-msgstr ""
+msgstr "Import de la contribució"
 
 #: CRM/Contact/Form/Search/Custom/ContribSYBNT.php
 msgid "Min Amount One"
@@ -10843,7 +10843,7 @@ msgstr "enllaç  pàgina d'informació"
 
 #: CRM/Friend/BAO/Friend.php
 msgid "Thank-you Title"
-msgstr "Títol d'agraïment"
+msgstr "Títol de l'agraïment"
 
 #: CRM/Friend/BAO/Friend.php
 msgid "Thank-you Message"
@@ -10859,7 +10859,7 @@ msgstr "Enllaç general"
 
 #: CRM/Friend/DAO/Friend.php
 msgid "Thankyou Title"
-msgstr "Títol d'agraïment"
+msgstr "Títol de l'agraïment"
 
 #: CRM/Friend/DAO/Friend.php
 msgid "Thankyou Text"
@@ -10877,13 +10877,13 @@ msgstr "Ajudeu-nos a difondre el missatge i aprofitar la força de la vostra con
 msgid ""
 "Thought you might be interested in learning about and helping this "
 "organization. I think they do important work."
-msgstr "He pensat que podríeu estar interessat en conèixer i ajudar a aquesta organització. Em penso que fan una tasca important."
+msgstr "He pensat que podries estar interessat en conèixer i ajudar a aquesta organització. Crec que fan una tasca molt important."
 
 #: CRM/Friend/Form/Contribute.php
 msgid ""
 "Thanks for telling your friends about us and supporting our efforts. "
 "Together we can make a difference."
-msgstr "Gràcies per dir als seus amics sobre nosaltres i donar suport els nostres esforços. Junts podem fer una diferència."
+msgstr "Gràcies per explicar als vostres amics qui som i donar suport als nostres esforços. Junts podem marcar la diferència."
 
 #: CRM/Friend/Form/Contribute.php CRM/Friend/Form/Event.php
 msgid "Thanks for Spreading the Word"
@@ -18416,7 +18416,7 @@ msgstr "En el correu electrònic enviat als amics s'inclou automàticament un en
 msgid ""
 "Your message thanking the %1 for helping to spread the word. You may include"
 " HTML tags to add formatting or links."
-msgstr "El vostre missatge agraint a %1 la difusió. Podeu incloure etiquetes HTML per a formatar o afegir enllaços."
+msgstr "El vostre missatge agraint a %1 l'ajuda en la difusió. Podeu incloure etiquetes HTML per afegir format al text o afegir-hi enllaços."
 
 #: templates/CRM/Friend/Form.tpl
 msgid ""
