--- a/po/ca_ES/event.po
+++ b/po/ca_ES/event.po
@@ -12,7 +12,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-14 17:30+0000\n"
+"PO-Revision-Date: 2016-11-02 16:14+0000\n"
 "Last-Translator: ixiam <info@ixiam.com>\n"
 "Language-Team: Catalan (http://www.transifex.com/civicrm/civicrm/language/ca/)\n"
 "MIME-Version: 1.0\n"
@@ -274,7 +274,7 @@ msgstr ""
 
 #: CRM/Event/DAO/Event.php
 msgid "ThankYou Title"
-msgstr "Títol d'agraïment"
+msgstr "Títol de l'agraïment"
 
 #: CRM/Event/DAO/Event.php
 msgid "ThankYou Text"
@@ -3502,7 +3502,7 @@ msgstr "Cliqueu el nom de l'esdeveniment per a més informació."
 
 #: templates/CRM/Event/Page/UserDashboard.tpl
 msgid "You are not registered for any current or upcoming Events."
-msgstr "No esteu inscrit per cap esdeveniment actual ni futur."
+msgstr "No esteu inscrit a cap esdeveniment actual ni futur."
 
 #: templates/CRM/Event/Page/iCalLinks.tpl
 msgid "Download iCalendar entry for this event."
