po: update po/fr_CA/mailing.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/fr_CA/mailing.po
+++ b/po/fr_CA/mailing.po
@@ -20,7 +20,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-26 02:19+0000\n"
+"PO-Revision-Date: 2016-11-02 19:58+0000\n"
 "Last-Translator: Rick Paré <rick.pare69@gmail.com>\n"
 "Language-Team: French (Canada) (http://www.transifex.com/civicrm/civicrm/language/fr_CA/)\n"
 "MIME-Version: 1.0\n"
@@ -1194,7 +1194,7 @@ msgstr "Aperçu texte"
 
 #: ang/crmMailing/BlockPreview.html
 msgid "Send test email to:"
-msgstr "Envoyer un courriel test à :"
+msgstr "Envoyer un courriel de test à:"
 
 #: ang/crmMailing/BlockPreview.html
 msgid "Test Email"
@@ -1210,7 +1210,7 @@ msgstr "Envoyer le test"
 
 #: ang/crmMailing/BlockPreview.html
 msgid "Send test email to group:"
-msgstr "Envoyer courriel de test au groupe :"
+msgstr "Envoyer un courriel de test au groupe:"
 
 #: ang/crmMailing/BlockPreview.html
 msgid "Send test message to group"
@@ -1428,7 +1428,7 @@ msgstr "Aperçu (%1)"
 
 #: ang/crmMailing/EditRecipOptionsDialogCtrl.html
 msgid "Dedupe by email"
-msgstr "Dédoublonner selon l'email"
+msgstr "Déduplication des courriels"
 
 #: ang/crmMailing/EditRecipOptionsDialogCtrl.html
 msgid "Selection Method"
@@ -1834,7 +1834,7 @@ msgid ""
 "that will help keep your mailings organized and easy to find when you want "
 "to review and compare mailing results. For example, if you do a monthly "
 "general-interest newsletter - you might use the following naming convention:"
-msgstr "Attribue un nom unique à chacun de publipostages. Sélectionnez une convention de nommage qui aideront à garder vos publipostages organisés et facile à trouver quand vous voulez pour examiner et comparer les résultats d'envoi. Par exemple, si vous avez fait une lettre d'information mensuelle d'intérêt général  - vous pouvez utiliser la convention de nommage suivante :"
+msgstr "Attribuez un nom unique à chacun des publipostages. Déterminez une convention de nommage qui aidera à garder vos publipostages organisés et facile à trouver quand vous voulez réviser et comparer les résultats d'envoi. Par exemple, si vous avez fait une lettre d'information mensuelle d'intérêt général  - vous pouvez utiliser la convention de nommage suivante:"
 
 #: templates/CRM/Mailing/Form/Group.hlp templates/CRM/Mailing/MailingUI.hlp
 msgid "General Monthly Newsletter: 200709"
@@ -2204,7 +2204,7 @@ msgstr "Si vous utilisez des  champs de fusion dans vos courriels, vérifiez qu'
 #: templates/CRM/Mailing/Form/Test.hlp templates/CRM/Mailing/MailingUI.hlp
 msgid ""
 "Click on each included link to make sure they go to the expected web pages."
-msgstr "Cliquez sur chacun des liens pour être sur qu'ils aboutissent à la page attendue"
+msgstr "Cliquez sur chacun des liens pour s'assurer qu'ils aboutissent à la page attendue."
 
 #: templates/CRM/Mailing/Form/Test.hlp
 msgid ""
@@ -2292,7 +2292,7 @@ msgid ""
 "You may choose to include a pre-configured Footer block below your message. "
 "This is a good place to include the required unsubscribe, opt-out and postal"
 " address tokens."
-msgstr "Vous pouvez choisir d'inclure un bloc de pied de page pré-configuré qui sera inséré à la fin de votre message. Ceci est un bon endroit pour inclure les liens nécessaires pour le désabonnement, l'opt-out et l'adresse postale."
+msgstr "Vous pouvez choisir d'inclure un bloc de pied de page pré-configuré qui sera inséré à la fin de votre message. Ceci est un bon endroit pour inclure les liens nécessaires pour le désabonnement, l'exclusion aux envois et l'adresse postale."
 
 #: templates/CRM/Mailing/Form/Upload.tpl
 msgid "More information and sample messages..."
@@ -2302,19 +2302,19 @@ msgstr "Pour plus d'information et des exemples de messages..."
 msgid ""
 "Multiple people -- such as spouses, parents, or children -- may sometimes "
 "share the same email address."
-msgstr "Plusieurs personnes - comme les conjoints, les parents ou les enfants - peuvent partager une même adresse courriels."
+msgstr "Plusieurs personnes comme les conjoints, les parents ou les enfants peuvent partager une même adresse de courriel."
 
 #: templates/CRM/Mailing/MailingUI.hlp
 msgid ""
 "To send only one message to the shared address, enable this option. Mail-"
 "merge tokens will be filled for only one person."
-msgstr "Pour envoyer un seul message à l'adresse partagée, activez cette option. Les champs de fusion ne seront alors complété que pour une seule personne."
+msgstr "Pour envoyer un seul message à l'adresse partagée, activez cette option. Les champs de fusion seront remplis que pour une seule personne."
 
 #: templates/CRM/Mailing/MailingUI.hlp
 msgid ""
 "To send separate messages for each person, disable this option. Mail-merge "
 "tokens will be filled separately for each person."
-msgstr "Pour envoyer un message séparé pour chacune de ses personnes, désactivez cette option. Les champs de fusion seront alors complété pour chacune de ces personnes."
+msgstr "Pour envoyer un message séparé pour chacune de ses personnes, désactivez cette option. "
 
 #: templates/CRM/Mailing/MailingUI.hlp
 msgid ""
@@ -2345,7 +2345,7 @@ msgstr ""
 msgid ""
 "It's a good idea to test your mailing by sending it to yourself and/or a "
 "selected group of people in your organization."
-msgstr "Nous vous conseillons de tester votre mailing en vous l'envoyant à vous-même ou à un groupe de personnes choisies dans votre organisation."
+msgstr "Nous vous conseillons de tester votre publipostage en vous l'envoyant à vous-même ou à un groupe de personnes choisies dans votre organisation."
 
 #: templates/CRM/Mailing/MailingUI.hlp
 msgid "Things to check in a test mailing:"
@@ -2355,7 +2355,7 @@ msgstr "Points à vérifier dans un courriel de test :"
 msgid ""
 "Verify the content and formatting looks consistent across various email "
 "clients."
-msgstr "Vérifiez dans différents clients mails que le contenu et la mise en forme sont conformes à vos attentes."
+msgstr "Vérifiez avec différent logiciel de courriel que le contenu et la mise en forme sont conformes à vos attentes."
 
 #: templates/CRM/Mailing/Page/Browse.hlp
 msgid ""
