po: update po/fr_CA/common-base.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/fr_CA/common-base.po
+++ b/po/fr_CA/common-base.po
@@ -27,7 +27,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-26 14:21+0000\n"
+"PO-Revision-Date: 2016-11-02 18:39+0000\n"
 "Last-Translator: Rick Paré <rick.pare69@gmail.com>\n"
 "Language-Team: French (Canada) (http://www.transifex.com/civicrm/civicrm/language/fr_CA/)\n"
 "MIME-Version: 1.0\n"
@@ -15905,14 +15905,14 @@ msgstr "Allez sur <a href='%1'>Administrer &raquo; Communications &raquo; Adress
 
 #: templates/CRM/Contact/Form/Task/Email.hlp
 msgid "Subject Tokens"
-msgstr "Champs de fusion objet"
+msgstr "Champs de fusion (Sujet)"
 
 #: templates/CRM/Contact/Form/Task/Email.hlp
 msgid ""
 "Use a token in the Subject when you are sending mail to a number of "
 "recipients and want to include their name and / or other values from their "
 "contact record automatically in the subject line."
-msgstr "Utilisez un jeton dans le sujet lorsque vous envoyez un courriel à plusieurs destinataires et que vous voulez automatiquement inclure leur nom ou d'autres informations personnelles dans le sujet."
+msgstr "Vous pouvez insérer des champs de fusion dans le sujet. Ils permettent d'inclure automatiquement dans le sujet du message des informations personnelles de vos destinataires."
 
 #: templates/CRM/Contact/Form/Task/Email.hlp
 #: templates/CRM/Contact/Form/Task/SMS.hlp
@@ -15932,7 +15932,7 @@ msgid ""
 "EXAMPLE: If you want your message to begin with \"Dear \" followed by the "
 "recipient's first name, you can use the %1 token in your message. <em>Dear "
 "%1</em>"
-msgstr "Exemple: si vous voulez qu'un message commence avec \"Cher(e)\" suivi du nom du destinataire, vous pouvez utiliser le jeton %1 dans votre message. <em>Cher(e) %1</em>"
+msgstr "Exemple: si vous voulez qu'un message commence avec \"Cher(e)\" suivi du prénom du destinataire, vous pouvez insérer le champ de fusion &quot;Prénom&quot; dans votre message. <em>Cher(e) %1</em>"
 
 #: templates/CRM/Contact/Form/Task/Email.hlp
 #: templates/CRM/Contact/Form/Task/SMS.hlp
@@ -15942,7 +15942,7 @@ msgid ""
 "corner of the message box to see a list of available tokens. Insert the "
 "token by clicking the desired token name in the list (for example, click "
 "&quot;First Name&quot;)."
-msgstr "Placez votre curseur à l'intérieur de la boite à message, là ou vous voulez insérer le code. Cliquez ensuite, dans le coin en haut à droite de la boite à message, sur le lien \"insérer le code\" pour voir une liste des codes disponibles. Insérez le code en cliquant sur le nom du code désiré dans la liste (par exemple, cliquez &quot;Nom&quot;)."
+msgstr "Placez votre curseur à l'intérieur de la boite à message, là où vous voulez insérer le champ de fusion. Cliquez ensuite dans la boite combinée &quot;Champs de fusion&quot; localisé dans le coin en haut à droite de la boite à message pour voir la liste des noms des champs de fusion disponibles. Insérez-le en le sélectionnant dans la liste. "
 
 #: templates/CRM/Contact/Form/Task/Email.hlp
 #: templates/CRM/Contact/Form/Task/SMS.hlp
@@ -15953,7 +15953,7 @@ msgstr "Vous utiliserez également des jetons pour insérer des lien de désinsc
 
 #: templates/CRM/Contact/Form/Task/Email.hlp
 msgid "Message Tokens"
-msgstr "Champs de fusion message"
+msgstr "Champs de fusion (Message)"
 
 #: templates/CRM/Contact/Form/Task/Email.hlp
 msgid ""
@@ -16022,7 +16022,7 @@ msgid ""
 "different email programs may interpret HTML formats differently - so use "
 "this option cautiously unless you have a template format that has been "
 "tested with different web and desktop email programs."
-msgstr "Les courriels au format HTML ont un meilleur rendu visuel, ils vous permettent d'inclure des images, des liens vers d'autres sites ainsi que du texte formaté. Cependant les logiciels de messagerie interprètent les formats HTML de manière différente. Il est donc conseillé de tester vos modèles de mailing avec plusieurs logiciels de messagerie webmail ou local."
+msgstr "Les courriels au format HTML ont un meilleur rendu visuel, ils vous permettent d'inclure des images, des liens vers d'autres sites ainsi que du texte formaté. Cependant, les logiciels de messagerie interprètent les formats HTML de manière différente. Il est donc conseillé de tester vos modèles de publipostage avec différents logiciels de messagerie Web et local."
 
 #: templates/CRM/Contact/Form/Task/Email.tpl
 msgid ""
@@ -16110,7 +16110,7 @@ msgid ""
 "Select a page format for PDF files created using this template if you wish "
 "to override the default format. Page formats define the paper size and "
 "margins."
-msgstr "Sélectionnez un format de page pour les fichiers PDF créés avec ce modèle si vous souhaitez ignorer le format par défaut. Les formats de page déterminent les dimensions du papier et les marges."
+msgstr "Sélectionnez un format de page pour les fichiers PDF créés avec ce modèle si vous souhaitez déroger du format par défaut. Les formats de page déterminent les dimensions du papier et des marges."
 
 #: templates/CRM/Contact/Form/Task/PDFLetterCommon.hlp
 msgid ""
