--- a/po/fr_CA/common-components.po
+++ b/po/fr_CA/common-components.po
@@ -20,7 +20,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-26 19:12+0000\n"
+"PO-Revision-Date: 2016-11-02 19:03+0000\n"
 "Last-Translator: Rick Paré <rick.pare69@gmail.com>\n"
 "Language-Team: French (Canada) (http://www.transifex.com/civicrm/civicrm/language/fr_CA/)\n"
 "MIME-Version: 1.0\n"
@@ -2092,7 +2092,7 @@ msgstr "Statut de l'envoi"
 #: templates/CRM/Mailing/Page/Browse.hlp templates/CRM/Mailing/Page/Report.tpl
 #: CRM/Report/Form/Mailing/Summary.php
 msgid "Mailing Name"
-msgstr "Nom du mailing"
+msgstr "Nom du publipostage"
 
 #: CRM/Mailing/Event/DAO/Bounce.php CRM/Mailing/Selector/Event.php
 #: CRM/Report/Form/Mailing/Bounce.php
